[tool.poetry]
name = "data-analysis-project"
version = "0.1.0"
description = ""
authors = ["Hadi Salameh <hadi.salameh@hotmail.com>"]
readme = "README.md"
include = [
    "price_clusters"
]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"
numpy = "^2.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
datasets = "^2.20.0"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
